--- a/National4HSatrusLiveAPI.csproj
+++ b/National4HSatrusLiveAPI.csproj
@@ -144,6 +144,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\national4hapi - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\national4hapi - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
