--- a/National4HSatrusLiveAPI.csproj
+++ b/National4HSatrusLiveAPI.csproj
@@ -145,13 +145,19 @@
     <Compile Include="Services\ContactService.cs" />
     <Compile Include="Services\InterestService.cs" />
     <Compile Include="Services\OrganizationService.cs" />
+    <Compile Include="Services\ParticipationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="log4net.config" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\4HbizabooappDev - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\4HbizabooappDev - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\national4hapi - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\national4hapi - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.Production.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
@@ -164,6 +170,16 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Production|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
