--- a/log4net.config
+++ b/log4net.config
@@ -5,18 +5,19 @@
   </configSections>
   <log4net>
     <root>
-      <priority value="Info"/>
+      <priority value="ALL"/>
       <appender-ref ref="AllLogAppender"/>
     </root>
+    <timestamp key="timestamp" datePattern="yyyyMMdd"/>
     <appender name="AllLogAppender" type="log4net.Appender.RollingFileAppender">
-      <level value="DEBUG"/>
-      <file value="App_Data\\Logs\\Application_Log.txt"/>
+      <param name="File" value="App_Data\\Logs\\Application_Log_"/>
+      <param name="RollingStyle" value="Date"/>
+      <param name="DatePattern" value="dd-MM-yyyy.\tx\t" />
+      <param name="StaticLogFileName" value="false"/>
+      <level value="ALL"/>
       <appendToFile value="true"/>
-      <rollingStyle value="Size"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="10MB"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %5-level %logger: %M - %message%newline"/>
+        <conversionPattern value="%date [%level] from %logger - %message%newline"/>
       </layout>
     </appender>
   </log4net>
