--- a/packages.config
+++ b/packages.config
@@ -2,14 +2,23 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="log4net" version="2.0.15" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0-preview1" targetFramework="net48" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.46" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
