--- a/National4HSatrusLiveAPI.csproj
+++ b/National4HSatrusLiveAPI.csproj
@@ -158,22 +158,26 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Extentions\OwinContextExtentions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\EventModel.cs" />
     <Compile Include="Models\ContactModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\OAuthAppProvider.cs" />
     <Compile Include="Services\ContactService.cs" />
+    <Compile Include="Services\EventService.cs" />
     <Compile Include="Services\InterestService.cs" />
     <Compile Include="Services\OrganizationService.cs" />
     <Compile Include="Services\ParticipationService.cs" />
@@ -187,6 +191,10 @@
     <None Include="Properties\PublishProfiles\4HbizabooappDev - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\national4hapi - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\national4hapi - Web Deploy.pubxml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -199,6 +207,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Data\" />
+    <Folder Include="Views\Contacts\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
